src/scss/desktop/_main.scss
/* ... */
.thumbnail5 {
    background-image: url("../../../assets/images/introcomponentbg.webp");
}

.thumbnail6 {
    background-image: url("../../../assets/images/podlandingbg.webp");
}

.thumbnail7 {
    background-image: url("../../../assets/images/bentogrid.webp");
}

.exit-icon {
    grid-area: 1/1/2/2;
    justify-self: end;

    max-height: util.rem(32);
}

[tooltip] {
    position: relative;
}

[tooltip]::before {
    content: "";

    position: absolute;
    top: util.rem(-10);
    left: 50%;
    z-index: 100;

    transform: translateX(-50%);

    border-width: util.rem(4) util.rem(6) 0 util.rem(6);
    border-style: solid;
    border-color: rgb(0, 0, 0) transparent transparent transparent;

    opacity: 0;
}

[tooltip]::after {
    content: attr(tooltip);

    position: absolute;
    left: 50%;
    top: util.rem(-10);

    transform: translateX(-50%)   translateY(-100%);

    background-color: rgb(0, 0, 0);

    padding: util.rem(6) util.rem(24);
    border-radius: util.rem(16);
    
    pointer-events: none;

    opacity: 0;

    font-size: fonts.$tooltip;
    color: var(--white);
    font-weight: fonts.$bold;
    text-align: center;
    white-space: nowrap;

    box-shadow: 0 util.rem(2) util.rem(8) 0 rgba(0, 0, 0, 0.4);
}

.commissions {
    display: none;
    justify-items: center;

    max-height: util.rem(20000);
    transition: max-height 200ms ease-in-out;

    animation-duration: 0.5s;
    animation-name: unset;
    animation-fill-mode: forwards;

    border-radius: util.rem(32);

    box-shadow: 0 util.rem(10) util.rem(8) 0 (rgba(0, 0, 0, 0.400));

    background-color: rgba(0, 0, 0, 0.300);
    backdrop-filter: blur(util.rem(64));

    &__top {
        display: grid;
        grid-area: 1/1/2/2;
        grid-template: auto / auto;

        min-width: 100%;

        padding: util.rem(16) util.rem(16) 0;

        &__icon {
            width: util.rem(32);
            height: util.rem(32);

            transition: all 0.2s ease-in-out;
        }

        &__header {
            grid-area: 1/1/2/2;
            justify-self: center;
            margin: util.rem(16) util.rem(32) 0;

            font-size: fonts.$header;
            font-weight: fonts.$bold;
    
            -webkit-text-stroke-width: util.rem(3);
            -webkit-text-stroke-color: var(--white);
        }
    }

    &-header {
        &:nth-of-type(2) {
            padding-bottom: util.rem(8);
        }
    }

    &__links {
        justify-self: center;
        width: 100%;
    }

    &__contents {
        display: grid;
        align-content: center;

        padding: 0 util.rem(48) util.rem(32);

        &__paragraph {
            justify-self: center;

            font-size: fonts.$paragraph;
            font-weight: fonts.$bold;
            text-align: center;
            line-height: util.rem(32);

            max-width: util.rem(400);

            &:nth-of-type(2) {
                margin-top: util.rem(24);
            }
        }

        &__list {
            display: grid;

            max-width: util.rem(400);

            list-style-position: inside;

            margin-top: util.rem(24);

            font-size: 1.375rem;
            font-weight: 700;
        }

        &__art {
            display: none;
        }

        &__webdev {
            display: none;
        }
    }

    &__tos {
        &__categories {
            display: grid;
            justify-self: center;
            font-size: 1.375rem;
            font-weight: 700;
            text-align: center;
            line-height: 2rem;
            padding: util.rem(8) 0 0 0;
            max-width: 25rem;
            width: 100%;

            grid-template: auto / auto;
            grid-row-gap: util.rem(12);
        }

        &__header {
            display: block;

            font-size: util.rem(24);
            text-decoration: underline;
            text-transform: uppercase;

            padding: 0 0 util.rem(16) 0;
        }

        &__download {
            text-align: center !important; 
        }

        &__paragraph {
            display: grid;
            justify-self: center;

            font-size: fonts.$paragraph;
            font-weight: fonts.$bold;
            text-align: left;
            line-height: util.rem(32);

            padding: 0 0 util.rem(24) 0;

            max-width: util.rem(400);
            width: 100%;
        }

        &__section {
            display: none;

            text-align: left;

            padding: 0 0 util.rem(24) 0;

            animation-duration: 0.3s;
            animation-name: fade-in;
            animation-fill-mode: forwards;

            &::after {
                content: " ";
                display: block;
                border-bottom: util.rem(3) solid var(--pink);
                padding: util.rem(36) 0 0 0;
            }

            &__header {
                display: grid;
                grid-template: auto / repeat(2, max-content);
                justify-self: start;

                font-size: util.rem(24);
                -webkit-text-stroke-width: 0.0625rem;
                -webkit-text-stroke-color: var(--white);

                transition: all 0.2s ease-in-out;
            }

            &__paragraph {
                padding: util.rem(24) 0 0 0;
            }
        }
    }

    &__chevron {
        align-self: center;

        max-height: util.rem(24);
        max-width: util.rem(24);

        margin: 0 0 0 util.rem(24);

        transition: all 0.2s ease-in-out;

        filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(840%) hue-rotate(312deg) brightness(112%) contrast(107%);
    }
}
/* ... */

